--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -18,7 +18,7 @@
             ]
         },
         {
-            "image" : "images/projects/idolit.png",
+            "image" : "images/projects/app.png",
             "title": "Idolit -  Social Media App",
             "bodyText": "- Social Media App For Talented Individuals developed with SwiftUI as a start-up.\n - Users can share posts + view their followers posts in their feed and interact with them with likes and comments.\n - Added User authentication using **Firebase**.\n - Utilizes Firestore for storing users' media.",
             "links": [
